--- a/Calculator Reborn/MainPage.xaml
+++ b/Calculator Reborn/MainPage.xaml
@@ -9,5 +9,7 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
+        <TextBlock x:Name="calculator_view" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
+        <Button x:Name="button_one" Content="1" Margin="10,34,0,0" VerticalAlignment="Top" Click="Calculator_Operation"/>
     </Grid>
 </Page>
