--- a/Calculator Reborn/MainPage.xaml
+++ b/Calculator Reborn/MainPage.xaml
@@ -10,6 +10,14 @@
 
     <Grid>
         <TextBlock x:Name="calculator_view" HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
-        <Button x:Name="button_one" Content="1" Margin="10,34,0,0" VerticalAlignment="Top" Click="Calculator_Operation"/>
+        <Button x:Name="button_one" Content="1" Margin="10,110,0,0" VerticalAlignment="Top" Click="Calculator_Operation"/>
+        <Button x:Name="button_two" Content="2" Margin="44,110,0,0" VerticalAlignment="Top" Click="Calculator_Operation"/>
+        <Button x:Name="button_three" Content="3" Margin="78,110,0,0" VerticalAlignment="Top" Click="Calculator_Operation"/>
+        <Button x:Name="button_four" Content="4" Margin="10,72,0,0" VerticalAlignment="Top" Click="Calculator_Operation"/>
+        <Button x:Name="button_five" Content="5" Margin="44,72,0,0" VerticalAlignment="Top" Click="Calculator_Operation"/>
+        <Button x:Name="button_six" Content="6" Margin="78,72,0,0" VerticalAlignment="Top" Click="Calculator_Operation"/>
+        <Button x:Name="button_seven" Content="7" Margin="10,34,0,0" VerticalAlignment="Top" Click="Calculator_Operation"/>
+        <Button x:Name="button_eight" Content="8" Margin="44,34,0,0" VerticalAlignment="Top" Click="Calculator_Operation"/>
+        <Button x:Name="button_nine" Content="9" Margin="78,34,0,0" VerticalAlignment="Top" Click="Calculator_Operation" RenderTransformOrigin="0.575,-1.195"/>
     </Grid>
 </Page>
