--- a/Calculator Reborn/MainPage.xaml
+++ b/Calculator Reborn/MainPage.xaml
@@ -19,5 +19,7 @@
         <Button x:Name="button_seven" Content="7" Margin="10,34,0,0" VerticalAlignment="Top" Click="Calculator_Operation"/>
         <Button x:Name="button_eight" Content="8" Margin="44,34,0,0" VerticalAlignment="Top" Click="Calculator_Operation"/>
         <Button x:Name="button_nine" Content="9" Margin="78,34,0,0" VerticalAlignment="Top" Click="Calculator_Operation" RenderTransformOrigin="0.575,-1.195"/>
+        <Button x:Name="button_add" Content="+" Margin="112,72,0,0" VerticalAlignment="Top" Click="Calculator_Operation"/>
+        <Button x:Name="button_equal" Content="=" Margin="112,110,0,0" VerticalAlignment="Top" Click="Calculator_Operation"/>
     </Grid>
 </Page>
